fix: change the display of the link, since it does not wrap all the content externally

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -34,12 +34,18 @@
   padding: 15px 15px;
 }
 .portfolio__link {
+  display: block;
+  line-height: 0;
+}
+.portfolio__link:hover {
+  display: block;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio__img {
   flex: 0 0 370px;
 }
 .portfolio__content {
-  margin-top: -3.5px;
   padding: 20px 24px;
   background: #ffffff;
   border: 1px solid #eeeeee;
